# AI-Agent-Skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  skill_change.yml
.github/workflows/: codeql.yml  validate.yml
automation/: ceratops-gh-skill-maintenance.md
backlog/: skills-refactor-backlog.md
contracts/: code-comment-standards.json  source-docs.json
contracts/artifacts/: artifact-contract.json  artifact-deterministic-contract.json  artifact-nondeterministic-checks.md  artifact-nondeterministic-contract.md
contracts/code/: code-comment-nondeterministic-contract.md  code-repo-deterministic-contract.json  code-repo-nondeterministic-contract.md
contracts/github/: github-org-contract.json  github-org-deterministic-contract.json  github-org-nondeterministic-checks.md  github-org-nondeterministic-contract.md  github-pr-readiness-deterministic-contract.json  github-repo-contract.json  (+4 more)
references/: best-practice-baseline.md
scripts/: build-runtime-skills.py  check-pending-release-work.ps1  gh_current_state.py  gh_current_state_checks.py  gh_live.py  gh_live_checks.py  github_nd_evidence.py  github_org_contract.py  github_pr_readiness.py  github_repo_artifact_contract.py  install-skills.ps1  restore-runtime-main.ps1  stage-release.ps1  sync-skill-core.py  sync-skill-sections.py  validate-skills.py
templates/: common-core-gh.md  common-core.md  skill-fragments.json  skill-sections.json
(+109 files in other folders)
