[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ceratops-gh-runtime"
version = "0.1.0"
description = "Local helper package for the Ceratops GitHub skill family."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
ceratops-gh-live-checks = "ceratops_gh_runtime.gh_live_checks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
